test/cases/pos/0046a_loop_block.ul
int x = 10;

loop {
  if x == 0: break;
  x--;
}
