test/cases/neg/0022a_bad_if.ul
int x = 10;

if x = 3: x = 0;
